lang/examples/bad/02-04-logical-operators.wdr
fun main(): Void {
  printBool(True ||| False);
  printBool(True & False);

  printBool(!!!True);
  printBool(!!False);

  return;
}